fix session title color dark mode

--- a/src/app/components/chat/chat-page/chat-page.component.scss
+++ b/src/app/components/chat/chat-page/chat-page.component.scss
@@ -591,6 +591,11 @@ textarea {
     background-color: #232323;
     border-right-color: #3d3d3d;
     
+    .nav-action-bar {
+      background-color: #232323;
+      border-bottom-color: #3d3d3d;
+    }
+    
     .sidebar-header {
       border-bottom-color: #3d3d3d;
     }
